Broken symmetry #89221

Closed
opened 2021-06-16 23:33:19 +02:00 by CHET · 13 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.1 Release Candidate, branch: master, commit date: 2021-06-09 06:57, hash: 5730112174

Short description of error
In Sculpt Mode symmetry doesn't work with Topology option

SgC91FbUHj.mp4

Test File:
test.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 950M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.1 Release Candidate, branch: master, commit date: 2021-06-09 06:57, hash: `5730112174` **Short description of error** In Sculpt Mode symmetry doesn't work with Topology option [SgC91FbUHj.mp4](https://archive.blender.org/developer/F10176028/SgC91FbUHj.mp4) Test File: [test.blend](https://archive.blender.org/developer/F10176506/test.blend)
Author

Added subscriber: @cheteron

Added subscriber: @cheteron
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Member

We require a .blend file in order to reproduce the issue. That said, in order for topology automasking and symmetry to work as expected, both topology and shape has to be as symmetrical as possible before starting the stroke, otherwise it can create unexpected results. You can use the symmetrize operator and try again.

We require a .blend file in order to reproduce the issue. That said, in order for topology automasking and symmetry to work as expected, both topology and shape has to be as symmetrical as possible before starting the stroke, otherwise it can create unexpected results. You can use the symmetrize operator and try again.
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Author
[test.blend](https://archive.blender.org/developer/F10176506/test.blend)
Author

The blender works fine only in a new scene, but after prolonged work it starts to break. Better check your code before release

The blender works fine only in a new scene, but after prolonged work it starts to break. Better check your code before release

Added subscriber: @chemicalcrux

Added subscriber: @chemicalcrux

Your mesh is slightly asymmetric (both in shape and in topology). This will cause problems for anything relying on symmetry, including the Topology auto-mask option.

Symmetrizing the mesh makes things work properly.

Your mesh is slightly asymmetric (both in shape and in topology). This will cause problems for anything relying on symmetry, including the `Topology` auto-mask option. Symmetrizing the mesh makes things work properly.

Added subscriber: @Harti

Added subscriber: @Harti

Voxel remesher usually produces asymmetry even when symmetry is enabled and that leads to such problems.

Voxel remesher usually produces asymmetry even when symmetry is enabled and that leads to such problems.

This issue was referenced by 6e4b9f5836

This issue was referenced by 6e4b9f5836cd9954c00b52e043e6a9af9fb4c112
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2021-06-23 18:26:48 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89221
No description provided.